# tvdinner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
debian/: changelog  control  copyright  rules  tvdinner.1  tvdinner.manpages
rpm/: tvdinner.spec
src/tvdinner/: __init__.py  cli.py  epg.py  favorites.py  log.py  m3u.py  overlay.py  player.py
tests/: test_cli.py  test_epg.py  test_favorites.py  test_m3u.py  test_overlay.py  test_player.py
