[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tvdinner"
version = "0.1.0"
description = "IPTV player with M3U/XMLTV EPG integration"
requires-python = ">=3.10"
dependencies = [
    "python-mpv>=1.0.7",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
tvdinner = "tvdinner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
